[FIX] submenu spacing

--- a/wordpress/wp-content/themes/ripple/assets/less/wordpress.less
+++ b/wordpress/wp-content/themes/ripple/assets/less/wordpress.less
@@ -2588,7 +2588,8 @@ ul.sub-menu {
 	margin-top: 25px;
 	float: right;
 	background: @white;
-	width: 78px;
+	width: 90px;
+	padding-left: 5px;
 }
 
 @media (max-width: 480px) {
